--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,27 +4,36 @@
   --background: #ffffff;
   --foreground: #171717;
 
-  --accent: #389731;
+  --primary: #389731;
+  --accent: #8FC867;
+  --dark-accent: #0d3b09;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  
+  --color-primary: var(--primary);
   --color-accent: var(--accent);
-
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-dark-accent: var(--dark-accent);
+  
+  --font-sans: var(--font-poppins);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+  h1 {
+    @apply text-center text-4xl/normal font-bold text-primary text-pretty
+  }
+  
+  h2 {
+    @apply text-primary font-bold text-3xl;
+  }
+}
+
+/* * { outline: 1px solid red; } */
