--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,26 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 
   --accent: #389731;
+  --accent-2: #298422;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-accent: var(--accent);
+  --color-accent-2: var(--accent-2);
+
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -23,8 +28,15 @@
   }
 }
 
+*/
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+}
+
+
+.mission {
+  background: linear-gradient(180deg, #8FC867 6%, rgba(143, 200, 103, 0.00) 30%);
 }
