feat: added new styling in css and renamed image file

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,7 @@
   --secondary: #0d3b09;
   --secondary-neutral: #1d1d1f;
   --secondary-neutral-light: #cecece;
+  --secondary-light: #C7E3B3;
 }
 
 @theme inline {
@@ -35,6 +36,7 @@
   --color-secondary: var(--secondary);
   --color-secondary-neutral: var(--secondary-neutral);
   --color-secondary-neutral-light: var(--secondary-neutral-light);
+  --color-secondary-light: var(--secondary-light);
 
   --font-sans: var(--font-poppins);
 }
