--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,11 @@
   --secondary-neutral: #1d1d1f;
   --secondary-neutral-light: #cecece;
   --secondary-light: #C7E3B3;
+  --secondary-lighter: #E6F1DD;
+
 }
+
+
 
 @theme inline {
   --color-background: var(--background);
@@ -37,6 +41,7 @@
   --color-secondary-neutral: var(--secondary-neutral);
   --color-secondary-neutral-light: var(--secondary-neutral-light);
   --color-secondary-light: var(--secondary-light);
+  --color-secondary-lighter: var(--secondary-lighter);
 
   --font-sans: var(--font-poppins);
 }
