--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@
 
   --color-primary: var(--primary);
   --color-accent: var(--accent);
-  
+
   --color-dark-accent: var(--dark-accent);
 
   --color-primary-dark: var(--primary-dark);
@@ -62,24 +62,6 @@ body {
   p {
     @apply text-2xl;
   }
-<<<<<<< HEAD
-}
-
-@utility grid-container {
-  grid-template-columns:
-    [screen-start]
-    minmax(96px, 1fr)
-    [content-start]
-    minmax(896px, 1fr)
-    [content-end]
-    minmax(96px, 1fr)
-    [screen-end];
-
-  & > * {
-    grid-column: content;
-  }
-=======
->>>>>>> 4da99bb (Draft portfolio page)
 }
 
 /* * { outline: 1px solid red; } */
@@ -89,5 +71,7 @@ body {
 }
 
 .starters-container {
-  box-shadow: 0px 136px 38px 0px rgba(0, 0, 0, 0.00), 0px 87px 35px 0px rgba(0, 0, 0, 0.01), 0px 49px 29px 0px rgba(0, 0, 0, 0.05), 0px 22px 22px 0px rgba(0, 0, 0, 0.09), 0px 5px 12px 0px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 136px 38px 0px rgba(0, 0, 0, 0),
+    0px 87px 35px 0px rgba(0, 0, 0, 0.01), 0px 49px 29px 0px rgba(0, 0, 0, 0.05),
+    0px 22px 22px 0px rgba(0, 0, 0, 0.09), 0px 5px 12px 0px rgba(0, 0, 0, 0.1);
 }
